[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
abao = { git = "https://github.com/n0-computer/abao", features = ["group_size_256k"], default_features = false }
anyhow = "1.0.66"
blake3 = "1.3.3"
chacha20poly1305 = "0.10.1"
flutter_rust_bridge = "1"
image = {version = "0.24.4", features = ["webp-encoder"]}
thumbhash = "0.1.0"

